--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,8 @@
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
+<script src="https://unpkg.com/interactjs/dist/interact.min.js"></script>
+
 <style>
     #map .map_img {
         background-image: url('/static/map.png');
@@ -66,12 +68,19 @@
         align-items: center;
         justify-content: center;
     }
+    #shop .items .item-wrapper {
+        width: 100%;
+        height: 100%;
+    }
     #shop .items .item {
         width: 100%;
         height: 100%;
         background-size: contain;
         background-repeat: no-repeat;
         position: relative;
+    }
+    #shop .item.pending-drop {
+        opacity: 0.5;
     }
     #shop .items .item .price {
         position: absolute;
@@ -91,6 +100,24 @@
         justify-content: center;
         width: 100%;
         height: 20vh;
+    }
+    #inventory .cell {
+        width: 18vh;
+        height: 18vh;
+        border: 1px solid #ffb000;
+    }
+    #inventory .inventory-empty {
+        width: 100%;
+        height: 100%;
+        padding: 0;
+    }
+    .drop-active {
+      border-color: #aaa;
+    }
+    .drop-target {
+      background-color: #29e;
+      border-color: #fff;
+      border-style: solid;
     }
 </style>
 
@@ -114,19 +141,31 @@
                 </div>
             </div>
             <div id="shop">
-                <div class="shopkeeper" :style="{
+                <div v-if="shop" class="shopkeeper" :style="{
                     backgroundImage: 'url(' + encodeURI(shop.shopkeeper.url) + ')'
                 }">
                 </div>
-                <div class="items">
-                    <div v-for="item in shop.items" class="item" :style="{
-                        backgroundImage: 'url(' + encodeURI(item.url) + ')'
-                    }">
-                    <div class="price">{{ item.price }}<img src="/static/gold.png" /></div>
+                <div v-if="shop" class="items">
+                    <div v-for="item in shop.items" class="item-wrapper inventory-draggable">
+                        <div :ref="`item-${item.slug}`" class="item" :style="{
+                            backgroundImage: 'url(' + encodeURI(item.url) + ')'
+                        }">
+                        <div class="price">{{ item.price }}<img src="/static/gold.png" /></div>
+                        </div>
                     </div>
                 </div>
             </div>
             <div id="inventory">
+                <div class="cell">
+                    <div class="inner-cell inventory-draggable">
+                        <div v-if="!inventory" class="inventory-empty">
+                        </div>
+                        <div v-if="inventory" class="inventory-item" :style="{
+                            backgroundImage: 'url(' + encodeURI(inventory.url) + ')'
+                        }">
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </script>
@@ -141,6 +180,11 @@
 
                 shop: null,
                 shops: {},
+
+                inventory: null,
+                gold: null,
+
+                dragItem: null,
             }),
             mounted() {
                 axios.get('/map').then(response => {
@@ -153,8 +197,14 @@
             methods: {
                 mainLoop() {
                     axios.get('/get_my_data').then(response => {
+                        if ((response.data.inventory || {}).slug != (this.inventory || {}).slug) {
+                            this.inventory = response.data.inventory;
+                        }
+                        if (response.data.gold != this.gold) {
+                            this.gold = response.data.gold;
+                        }
                         if (response.data.closest_scan) {
-                            if (response.data.closest_scan.mac_address !== (this.map_user_area || {}).mac_address) {
+                            if (response.data.closest_scan.mac_address !== (this.map_user_pos || {}).mac_address) {
                                 this.map_user_pos = response.data.closest_scan;
                                 this.map_user_area = response.data.closest_scan.beacon.area;
                             }
@@ -173,9 +223,83 @@
             watch: {
                 map_user_pos: function(val) {
                     this.shop = this.shops[val.mac_address];
+                    this.$nextTick(() => {
+                        for (const item of this.shop.items) {
+                            const el = this.$refs[`item-${item.slug}`];
+                            console.log(el)
+                        }
+
+                        interact('.item')
+                            .draggable({
+                                inertia: true,
+                                modifiers: [
+                                ],
+                                autoScroll: true,
+                                // dragMoveListener from the dragging demo above
+                                listeners: { move: dragMoveListener }
+                            })
+                    })
+                },
+                inventory: {
+                    handler() {
+                        if (!this.inventory) {
+                            interact('.inventory-empty').dropzone({
+                                // only accept elements matching this CSS selector
+                                accept: '.item',
+                                // Require a 50% element overlap for a drop to be possible
+                                overlap: 0.50,
+
+                                // listen for drop related events:
+                                ondropactivate: function (event) {
+                                    // add active dropzone feedback
+                                    event.target.classList.add('drop-active')
+                                },
+                                ondragenter: function (event) {
+                                    var draggableElement = event.relatedTarget
+                                    var dropzoneElement = event.target
+                                
+                                    // feedback the possibility of a drop
+                                    dropzoneElement.classList.add('drop-target')
+                                    draggableElement.classList.add('can-drop')
+                                },
+                                ondragleave: function (event) {
+                                    // remove the drop feedback style
+                                    event.target.classList.remove('drop-target')
+                                    event.relatedTarget.classList.remove('can-drop')
+                                },
+                                ondrop: function (event) {
+                                    console.log("ondrop", event)
+                                    event.relatedTarget.classList.add('pending-drop')
+                                },
+                                ondropdeactivate: function (event) {
+                                    // remove active dropzone feedback
+                                    event.target.classList.remove('drop-active')
+                                    event.target.classList.remove('drop-target')
+                                    event.relatedTarget.style.transform = 'none'
+                                    event.relatedTarget.setAttribute('data-x', 0)
+                                    event.relatedTarget.setAttribute('data-y', 0)
+                                }
+                            })
+                        }
+                    },
+                    immediate: true
                 }
             }
         })
+        function dragMoveListener (event) {
+            var target = event.target
+            // keep the dragged position in the data-x/data-y attributes
+            var x = (parseFloat(target.getAttribute('data-x')) || 0) + event.dx
+            var y = (parseFloat(target.getAttribute('data-y')) || 0) + event.dy
+          
+            // translate the element
+            target.style.transform = 'translate(' + x + 'px, ' + y + 'px)'
+          
+            // update the posiion attributes
+            target.setAttribute('data-x', x)
+            target.setAttribute('data-y', y)
+          }
+          
     </script>
     {% endraw %}
 </body>
