--- a/templates/index.html
+++ b/templates/index.html
@@ -95,11 +95,14 @@
     }
     #inventory {
         display: flex;
-        flex-direction: column;
-        align-items: center;
+        align-items: flex-end;
         justify-content: center;
         width: 100%;
         height: 20vh;
+    }
+    #inventory .price {
+        font-size: 5vh;
+        color: #ffb000;
     }
     #inventory .cell {
         width: 18vh;
@@ -172,6 +175,9 @@
                         </div>
                     </div>
                 </div>
+                <div class="money">
+                    <div class="price">{{ money }}<img src="/static/gold.png" /></div>
+                </div>
             </div>
         </div>
     </script>
@@ -188,7 +194,7 @@
                 shops: {},
 
                 inventory: null,
-                gold: null,
+                money: null,
 
                 dragItem: null,
             }),
@@ -206,8 +212,8 @@
                         if ((response.data.inventory || {}).slug != (this.inventory || {}).slug) {
                             this.inventory = response.data.inventory;
                         }
-                        if (response.data.gold != this.gold) {
-                            this.gold = response.data.gold;
+                        if (response.data.money != this.money) {
+                            this.money = response.data.money;
                         }
                         if (response.data.closest_scan) {
                             if (response.data.closest_scan.mac_address !== (this.map_user_pos || {}).mac_address) {
@@ -250,6 +256,7 @@
                             console.log(el)
                         }
 
+                        interact('.item').unset()
                         interact('.item')
                             .draggable({
                                 inertia: true,
@@ -265,6 +272,7 @@
                     handler() {
                         const vm = this;
                         if (!this.inventory) {
+                            interact('.inventory-empty').unset()
                             interact('.inventory-empty').dropzone({
                                 // only accept elements matching this CSS selector
                                 accept: '.item',
@@ -307,6 +315,7 @@
                                 }
                             })
                         } else {
+                            interact('.inventory-item').unset()
                             interact('.inventory-item')
                                 .draggable({
                                     inertia: true,
@@ -315,6 +324,7 @@
                                     // dragMoveListener from the dragging demo above
                                     listeners: { move: dragMoveListener, end: dragDropListener }
                                 })
+                            interact('.shopkeeper').unset()
                             interact('.shopkeeper').dropzone({
                                 // only accept elements matching this CSS selector
                                 accept: '.inventory-item',
