--- a/templates/index.html
+++ b/templates/index.html
@@ -60,8 +60,8 @@
         height: 50vh;
     }
     #shop .shopkeeper {
-        width: 100%;
-        height: 70%;
+        width: 30vh;
+        height: 30vh;
         background-size: contain;
         background-repeat: no-repeat;
         position: relative;
